# Proyecto_final_ALSE

Project_F/: CMakeCache.txt.prev  CMakeLists.txt  Control_DB.cpp  Control_DB.h  Makefile  cmake_install.cmake  main.cpp  main_I.cpp  mainw_datos.cpp  mainw_datos.h  mainw_datos.ui  sensor.cpp  sensor.h
Project_F/.cmake/api/v1/reply/: cache-v2-5da0d679a0b82f1dbda8.json  cmakeFiles-v1-3006eb37423e1f82b702.json  codemodel-v2-091a92b2bb23e975b042.json  index-2024-05-24T19-26-23-0038.json  target-Proyecto_consola-Debug-111f891f30309ca7021f.json  target-Proyecto_consola_autogen-Debug-0fb4aa08e08db6c7e0a0.json  target-Proyecto_interfaz-Debug-e57676b11cdb13664e3e.json  target-Proyecto_interfaz_autogen-Debug-9eb06f99c8cbdaf98c13.json
Project_F/Proyecto_interfaz_autogen/: mocs_compilation.cpp
Project_F/Proyecto_interfaz_autogen/EWIEGA46WW/: moc_mainw_datos.cpp  moc_mainw_datos.cpp.d
Project_F/Proyecto_interfaz_autogen/include/: ui_mainw_datos.h
build-Project_F-Desktop-Debug/: CMakeCache.txt  CMakeCache.txt.prev  Makefile  cmake_install.cmake
build-Project_F-Desktop-Debug/.cmake/api/v1/reply.prev/: cache-v2-3858c561110b39c5e466.json  cmakeFiles-v1-4dd821c81870a13542f1.json  codemodel-v2-9636e61dd44841992eb8.json  index-2024-05-23T23-19-47-0497.json  target-Project_F-Debug-32c5ac59003130206a0e.json  target-Project_F_autogen-Debug-699be44277295da10ae5.json
build-Project_F-Desktop-Debug/Proyecto_interfaz_autogen/EWIEGA46WW/: moc_mainw_datos.cpp  moc_mainw_datos.cpp.d
build-Project_F-Desktop-Debug/Proyecto_interfaz_autogen/include/: ui_mainw_datos.h
(+8 files in other folders)
